Fixed character avatars being stretched

--- a/css/valor.css
+++ b/css/valor.css
@@ -290,7 +290,6 @@
   height: auto;
   width: 5vw;
   margin: 5px 8px 5px 0px;
-  aspect-ratio: 2 / 3;
   overflow: hidden;
 }
 
